--- a/Utilities/Utilities.csproj
+++ b/Utilities/Utilities.csproj
@@ -39,7 +39,7 @@
     <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <EmbedInteropTypes>True</EmbedInteropTypes>
-      <HintPath>..\..\webbankbudgeter_trunk\Lib\Microsoft.Office.Interop.Excel.dll</HintPath>
+      <HintPath>..\Lib\Microsoft.Office.Interop.Excel.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
