REMOVES HANDELSBANKEN STUFF almost all. Also Replaces IE webbrowser with CefSharp chromium. Removed lot of commented out code

--- a/Budgeter.Core/Budgeter.Core.csproj
+++ b/Budgeter.Core/Budgeter.Core.csproj
@@ -40,7 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BudgeterConstants\BankType.cs" />
-    <Compile Include="BudgeterConstants\ShbConstants.cs" />
+    <Compile Include="BudgeterConstants\BankConstants.cs" />
     <Compile Include="Entities\BankRow.cs" />
     <Compile Include="Entities\DescendingComparer.cs" />
     <Compile Include="Entities\KontoEntry.cs" />
