--- a/RefLesses/RefLesses.csproj
+++ b/RefLesses/RefLesses.csproj
@@ -41,7 +41,7 @@
     <Compile Include="MiscFunctions.cs" />
     <Compile Include="NumberFunctions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StringFuncions.cs" />
+    <Compile Include="StringFunctions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
