--- a/Utilities/Utilities.csproj
+++ b/Utilities/Utilities.csproj
@@ -59,15 +59,18 @@
     <Compile Include="ExcelRowEntry.cs" />
     <Compile Include="FileType.cs" />
     <Compile Include="Logger.cs" />
-    <Compile Include="MessageHandler.cs" />
     <Compile Include="OpenFileFunctions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestInfo.cs" />
     <Compile Include="WinFormsChecks.cs" />
-    <Compile Include="XlWBATemplate.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RefLesses\RefLesses.csproj">
+      <Project>{7E82EB3E-C8C6-4084-ADC8-47E8E24484F1}</Project>
+      <Name>RefLesses</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
