--- a/Budgetterarn/Budgetterarn.csproj
+++ b/Budgetterarn/Budgetterarn.csproj
@@ -105,7 +105,7 @@
     <Compile Include="DAL\FileBackupper.cs" />
     <Compile Include="DAL\SaveKonton.cs" />
     <Compile Include="DoneNavigationAction.cs" />
-    <Compile Include="KontoEntriesChecker.cs" />
+    <Compile Include="EntryLogicSetFlags\KontoEntriesChecker.cs" />
     <Compile Include="KontoEntryListView.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -123,6 +123,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="ProgramSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="EntryLogicSetFlags\SkyddatBeloppChecker.cs" />
     <Compile Include="WebCrawlers\EntryAdder.cs" />
     <Compile Include="WebCrawlers\SaldoValueAdder.cs" />
     <EmbeddedResource Include="BudgeterForm.resx">
@@ -158,8 +159,8 @@
       <DependentUpon>InputBoxDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="InternalUtilities\ListViewColumnSorter.cs" />
-    <Compile Include="UiHelpers.cs" />
-    <Compile Include="UiHelpersDependant.cs" />
+    <Compile Include="EntryLogicSetFlags\KontoEntryKeyChecker.cs" />
+    <Compile Include="EntryLogicSetFlags\EntryAdderAndReplacer.cs" />
     <Compile Include="ViewUpdateUI.cs" />
   </ItemGroup>
   <ItemGroup>
