--- a/TestBudgetterarn/TestBudgetterarn.csproj
+++ b/TestBudgetterarn/TestBudgetterarn.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BudgeterTest.cs" />
+    <Compile Include="GetAllVisibleEntriesFromWebBrowserTests.cs" />
     <Compile Include="KontoEntryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CheckNewEntriesTests.cs" />
