--- a/TestBudgetterarn/TestBudgetterarn.csproj
+++ b/TestBudgetterarn/TestBudgetterarn.csproj
@@ -65,6 +65,10 @@
       <Project>{CAC91AEB-8F3D-4793-9A6F-4C761688A2DB}</Project>
       <Name>Budgetterarn</Name>
     </ProjectReference>
+    <ProjectReference Include="..\LoadTransactionsFromFile\LoadTransactionsFromFile.csproj">
+      <Project>{618A6F79-4251-4969-857B-E806C0F45882}</Project>
+      <Name>LoadTransactionsFromFile</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Data\Categories.xml">
@@ -82,6 +86,7 @@
     <Content Include="Data\TrickyURLS.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="TestData\swedPrivhtml.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
