--- a/Budgetterarn/Budgetterarn.csproj
+++ b/Budgetterarn/Budgetterarn.csproj
@@ -101,6 +101,7 @@
     <Compile Include="BudgeterForm.Designer.cs">
       <DependentUpon>BudgeterForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="BudgeterFormHelper.cs" />
     <Compile Include="DAL\FileBackupper.cs" />
     <Compile Include="DAL\SaveKonton.cs" />
     <Compile Include="DoneNavigationAction.cs" />
