ignore packages dir in GIt

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,39 @@ obj
 /.vs
 /packages
 /TestBudgetterarn/TestBudgetterarn.csproj.user
+/packages/MSTest.TestAdapter.2.1.2
+/packages/MSTest.TestFramework.2.1.2
+/packages/System.Buffers.4.5.1
+/packages/System.Memory.4.5.4
+/packages/System.Numerics.Vectors.4.5.0
+/packages/System.Runtime.CompilerServices.Unsafe.5.0.0
+/packages/System.Text.Encodings.Web.5.0.0
+/packages/System.Text.Encodings.Web.5.0.1
+/packages/System.Text.Json.5.0.1
+/packages/System.Text.Json.5.0.2
+/packages/System.Threading.Tasks.Extensions.4.5.4
+/packages/System.ValueTuple.4.5.0
+/packages/cef.redist.x64.92.0.26
+/packages/cef.redist.x86.92.0.26
+/packages/CefSharp.Common.92.0.260
+/packages/CefSharp.WinForms.92.0.260
+/packages/iTextSharp.5.5.13.2
+/packages/Microsoft.Bcl.AsyncInterfaces.5.0.0
+/packages/Microsoft.Office.Interop.Excel.15.0.4795.1000
+/packages/System.ValueTuple.4.5.0
+/packages/iTextSharp.5.5.13.2
+/packages/Microsoft.Bcl.AsyncInterfaces.5.0.0
+/packages/Microsoft.Office.Interop.Excel.15.0.4795.1000
+/packages/MSTest.TestAdapter.2.1.2
+/packages/MSTest.TestFramework.2.1.2
+/packages/System.Buffers.4.5.1
+/packages/System.Memory.4.5.4
+/packages/System.Numerics.Vectors.4.5.0
+/packages/System.Runtime.CompilerServices.Unsafe.5.0.0
+/packages/System.Text.Encodings.Web.5.0.0
+/packages/System.Text.Encodings.Web.5.0.1
+/packages/System.Text.Json.5.0.1
+/packages/System.Text.Json.5.0.2
+/packages/System.Threading.Tasks.Extensions.4.5.4
+/packages/CefSharp.Common.92.0.260
+/packages/CefSharp.WinForms.92.0.260
