--- a/GeneralSettingsTests/GeneralSettingsTests.csproj
+++ b/GeneralSettingsTests/GeneralSettingsTests.csproj
@@ -56,13 +56,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Budgetterarn\Budgetterarn.csproj">
-      <Project>{CAC91AEB-8F3D-4793-9A6F-4C761688A2DB}</Project>
-      <Name>Budgetterarn</Name>
-    </ProjectReference>
     <ProjectReference Include="..\CategoryHandler\CategoryHandler.csproj">
       <Project>{C707980B-CDAC-4A23-BE4C-5E41856541B0}</Project>
       <Name>CategoryHandler</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GeneralSettingsHandler\GeneralSettingsHandler.csproj">
+      <Project>{0cacb8d4-46ba-4429-86aa-e92134259494}</Project>
+      <Name>GeneralSettingsHandler</Name>
     </ProjectReference>
     <ProjectReference Include="..\Serializers\Serializers.csproj">
       <Project>{D9A75C48-AEED-4BEA-8C87-505146705DD6}</Project>
