LoadExcelFile performance improvement and refactor

--- a/UtilitiesTest/UtilitiesTest.csproj
+++ b/UtilitiesTest/UtilitiesTest.csproj
@@ -48,6 +48,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LoadExcelFileTests.cs" />
     <Compile Include="LoggerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringTest.cs" />
