--- a/SwedbankSharp-master/WebBankBudgeter/WebBankBudgeter.csproj
+++ b/SwedbankSharp-master/WebBankBudgeter/WebBankBudgeter.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="WebBankBudgeterUi.resx">
       <DependentUpon>WebBankBudgeterUi.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
