--- a/CategoryHandler/CategoryHandler.csproj
+++ b/CategoryHandler/CategoryHandler.csproj
@@ -45,9 +45,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Serializers\Serializers.csproj">
-      <Project>{d9a75c48-aeed-4bea-8c87-505146705dd6}</Project>
-      <Name>Serializers</Name>
+    <ProjectReference Include="..\SerializerXml\SerializerXml.csproj">
+      <Project>{36c07547-df0f-49d5-8e36-93d05b348036}</Project>
+      <Name>SerializerXml</Name>
     </ProjectReference>
     <ProjectReference Include="..\Utilities\Utilities.csproj">
       <Project>{e6bffa45-e5f3-48d1-a5a8-953a37b6e7e7}</Project>
