--- a/SwedbankSharp-master/WebBankBudgeter.Service/WebBankBudgeter.Service.csproj
+++ b/SwedbankSharp-master/WebBankBudgeter.Service/WebBankBudgeter.Service.csproj
@@ -72,9 +72,9 @@
       <Project>{618A6F79-4251-4969-857B-E806C0F45882}</Project>
       <Name>LoadTransactionsFromFile</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Serializers\Serializers.csproj">
-      <Project>{d9a75c48-aeed-4bea-8c87-505146705dd6}</Project>
-      <Name>Serializers</Name>
+    <ProjectReference Include="..\..\SerializerXml\SerializerXml.csproj">
+      <Project>{36c07547-df0f-49d5-8e36-93d05b348036}</Project>
+      <Name>SerializerXml</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
